--- a/css/estilos.scss
+++ b/css/estilos.scss
@@ -263,7 +263,7 @@ footer{
                     color: #d9d9db;
                     font-size: 20px;
                 }
-                .producto-añadir{
+                .producto-agregar{
                     background-color: #c17767;
                     color: #d9d9db;
                     border-radius: 15px;
@@ -275,7 +275,7 @@ footer{
                     transition: background-color .5s, color .5s;
 
                 }
-                .producto-añadir:hover{
+                .producto-agregar:hover{
                     border-color: #d9d9db;
                     background-color: transparent;
                 }
